fixed overflow and added anchors to navbar. Mostly completed experiences section

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-body {
+html,body{
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;  
+    overflow-x: hidden;
 }
+
 h1{
     text-align: center;
 }
@@ -18,14 +19,13 @@ p{
 /* About */
 
 .about{
-    height:700px;
+    height:650px;
     background-color: 957DAD;
     box-sizing: border-box;
     
 }
 .about h1{
     color:white;
-    padding-top: 50px;
 }
 .about p{
     color: white;
@@ -38,30 +38,27 @@ p{
     }
     .about p{
     padding-top: 65px;
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-left:20px;
+    padding-right:20px;
     font-size: 23px;
     }
 }
-@media (min-width: 375px){
-    .about h1{
-        font-size: 75px;
-    }
-    .about p{
-    padding-top: 45px;
-    padding-left: 50px;
-    padding-right: 50px;
-    font-size: 25px;
-    }
-}
-@media (min-width: 1600px){
+@media (min-width: 600px){
     .about h1{
         font-size: 75px;
     }
     .about p{
     padding-top: 100px;
-    padding-left: 300px;
-    padding-right: 300px;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 30px;
+    }
+}
+@media (min-width: 1024px){
+    .about p{
+    padding-top: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
     font-size: 35px;
     }
 }
@@ -69,15 +66,25 @@ p{
 /* previousWork */
 
 .previousWork{
-    height:700px;
+    height:750px;
     background-color: DF9881;
     box-sizing: border-box;
+}
+.previousWork h1{
+    color: white;
+}
+.previousWork .grid-item{
+    color: white;
 }
 
 .grid-container {
     display: grid;
-   
   }
+
+.grid-container-1 .item0 {
+    grid-area: Header;
+}
+
 .grid-container-1 .item1 {
     grid-area: Logo1;
 }
@@ -87,15 +94,181 @@ p{
 .grid-container-1 .item3 {
     grid-area: Logo3;
 }
-.grid-container-1 {
-    grid-template-columns: 1fr 1fr;
-    text-align: center;
-    grid-template-areas: 
-    "Logo1 Logo1"
-    "Logo2 Logo3"
+.grid-container-1 .item4 {
+    grid-area: Logo4;
+}
+.grid-container-1 .item5 {
+    grid-area: Logo5;
+}
+.grid-container-1 .item6 {
+    grid-area: Logo6;
 }
 
-/* previousWork */
+.grid-container-2 .item7{
+    grid-area: Header;
+}
+.grid-container-2 .item8{
+    grid-area: Occupation1;
+}
+.grid-container-2 .item9{
+    grid-area: Occupation2;
+}
+
+@media (min-width: 320px){
+
+    .previousWork h1{
+        font-size: 65px;
+        padding-top: 25px;
+    }
+
+    .previousWork .grid-container-1 .grid-item{
+        padding-top: 10px;
+        font-size: 20px;
+        font-family: "Lucida Console", "Courier New", monospace;
+    }
+    .previousWork .grid-container-1 .item0{
+        font-size: 30px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-1 {
+        padding-top: 50px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Logo1  Logo4"
+        "Logo2  Logo5"
+        "Logo3 Logo6"
+    }
+
+
+    .previousWork .grid-container-2 .grid-item{
+        padding-top: 10px;
+        font-size: 20px;
+        font-family: "Arial";
+    }
+    .previousWork .grid-container-2 .item7{
+        font-size: 30px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-2 {
+        padding-top: 100px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Occupation1 Occupation2"
+    }
+    
+}
+
+@media (min-width: 600px){
+    .previousWork{
+        height:825px;
+    }
+    .previousWork h1{
+        font-size: 65px;
+        padding-top: 25px;
+    }
+
+    .previousWork .grid-container-1 .grid-item{
+        padding-top: 10px;
+        font-size: 35px;
+        font-family: "Lucida Console", "Courier New", monospace;
+    }
+    .previousWork .grid-container-1 .item0{
+        font-size: 45px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-1 {
+        padding-top: 50px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Logo1  Logo4"
+        "Logo2  Logo5"
+        "Logo3 Logo6"
+    }
+
+
+    .previousWork .grid-container-2 .grid-item{
+        padding-top: 10px;
+        font-size: 35px;
+        font-family: "Arial";
+    }
+    .previousWork .grid-container-2 .item7{
+        font-size: 45px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-2 {
+        padding-top: 100px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Occupation1 Occupation2"
+    }
+    
+}
+
+@media (min-width: 1024px){
+    
+    .previousWork{
+        height:925px;
+    }
+    .previousWork h1{
+        font-size: 65px;
+        padding-top: 25px;
+    }
+
+    .previousWork .grid-container-1 .grid-item{
+        padding-top: 10px;
+        font-size: 45px;
+        font-family: "Lucida Console", "Courier New", monospace;
+    }
+    .previousWork .grid-container-1 .item0{
+        font-size: 45px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-1 {
+        padding-top: 50px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Logo1  Logo4"
+        "Logo2 Logo5"
+        "Logo3 Logo6"
+    }
+
+
+    .previousWork .grid-container-2 .grid-item{
+        padding-top: 10px;
+        font-size: 45px;
+        font-family: "Arial";
+    }
+    .previousWork .grid-container-2 .item7{
+        font-size: 45px;
+        font-family: "Verdana";    
+    }
+
+    .grid-container-2 {
+        padding-top: 100px;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        grid-template-areas:
+        "Header Header" 
+        "Occupation1 Occupation2"
+    }
+}
+
+/* Projects */
 
 .projects{
     height:700px;
@@ -106,14 +279,14 @@ p{
 /* Form*/
 .contacts {
     margin: auto;
+    height:400px;
     background-color: BAD8FF;
 }
 
-.contacts .form-group {
-    margin: 5px 1px;
-}
 .contacts .main-form {
     text-align: center;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 @media (min-width: 414px) {
     .main-form{
